доделал api для users, пара правок, начал работу над company
